tests/ui/parser/diff-markers/use-statement.rs
use foo::{
<<<<<<< HEAD //~ ERROR encountered diff marker
    bar,
=======
    baz,
>>>>>>> branch
};

fn main() {}
